bk_ida/gobmkida/c2/add_false_eye
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/add_false_eye/src/engine/optics.c:1895:12: error: expected expression
*( _OWORD *)( p_defense_point - 6) = *( _OWORD *)&v4->color; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/add_false_eye/src/engine/optics.c:1895:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( p_defense_point - 6) = *( _OWORD *)&v4->color; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/add_false_eye/src/engine/optics.c:1895:49: error: expected expression
*( _OWORD *)( p_defense_point - 6) = *( _OWORD *)&v4->color; 
                                                ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/add_false_eye/src/engine/optics.c:1895:41: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( p_defense_point - 6) = *( _OWORD *)&v4->color; 
                                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/add_false_eye/src/engine/optics.c:1896:33: error: operand of type 'struct eyevalue' where arithmetic or pointer type is required
*( p_defense_point - 2) = ( int)v4->value; 
                                ^~~~~~~~~
5 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/add_false_eye/src/obj/1/optics.o] Error 1
